Rename and restructure

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </section>
 
 <script src="app.js"></script>
-<script src="./whack_a_mole/index.js"></script>
-<script src="./tic_tac_toe/index.js"></script>
+<script src="./whack_a_mole/wam.js"></script>
+<script src="./tic_tac_toe/ttt.js"></script>
 </body>
 </html>
