Chrome dino game

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <section class="container" style="background-color: #de9f21;">
             <h1 data-type="A personal portfolio" data-speed="50"></h1>
             <h2 data-type="By Aoife McLoughlin" data-speed="50"></h2>
+            <canvas id="game"></canvas>
     </section>
 
 
@@ -50,5 +51,6 @@
 <script src="app.js"></script>
 <script src="./whack_a_mole/wam.js"></script>
 <script src="./tic_tac_toe/ttt.js"></script>
+<script src="./chrome_dinosaur/cd.js" type="module"></script>
 </body>
 </html>
